<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="411dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/off_white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="364dp"
            android:layout_height="54dp"
            android:layout_marginTop="128dp"
            android:text="@string/loginButton"
            android:textColor="@color/off_white"
            android:textSize="20sp"
            app:backgroundTint="@color/light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appname" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="364dp"
            android:layout_height="54dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="95dp"
            android:text="@string/signUpButton"
            android:textColor="@color/off_white"
            android:textSize="20sp"
            app:backgroundTint="@color/darkblue"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
