<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="#FF9800"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"
                app:layout_constraintEnd_toEndOf="@+id/materialToolbar3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/materialToolbar3" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar3">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/loginPageTitle"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="34sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="Please sign in to continue"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/emailText"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/passwordText"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/editTextText2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="32dp"
                android:text="@string/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:text="@string/newUserText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>