<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white">



        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/loginPageTitle"
            android:textAlignment="center"
            android:textColor="@color/darkblue"
            android:textSize="48sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="415dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle">

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/emailText"
                    android:textAlignment="center"
                    android:textColor="@color/darkblue"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/passwordText"
                    android:textAlignment="center"
                    android:textColor="@color/darkblue"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/newUserText"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/darkblue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="232dp"
            android:layout_height="65dp"
            android:layout_marginTop="80dp"
            android:text="@string/loginButton"
            android:textColor="@color/off_white"
            app:backgroundTint="@color/darkblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
