<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id= "@+id/popUpBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkblue"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/forgetPasswordPageTitle"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="Please enter account email address"
            android:textColor="@color/blue"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="24dp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:inputType="textEmailAddress"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:text="@string/cancelButton"
            app:backgroundTint="@color/darkblue"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="59dp"
            android:text="@string/resetButton"
            app:backgroundTint="@color/darkblue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
